--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./assets/styles/styles.css"/>
   <title>Frontend Mentor | Results summary component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -22,62 +22,48 @@
       <div class="summary__result">
         <h3>your result</h3>
         <div class="summary__result-score">
-          76<br/>
-          of 100
+          <span>76</span>
+          <p>of 100</p>
+          
         </div>
-        <h3>Great</h3>
+        <h2>Great</h2>
         <p>You scored higher than 65% of the people who have taken these tests.</p>
       </div>
+
+      <div class="summary__detail">
+        <h3>Summary</h3>
+        <div class="summary__detail-item summary__detail-item1">
+          <img src="./assets/images/icon-reaction.svg"/>
+          <p class="category category1">reaction</p>
+  
+          <p class="score">80<span> / 100</span></p>
+        </div>
+        <div class="summary__detail-item summary__detail-item2">
+          <img src="./assets/images/icon-memory.svg"/>
+          <p class="category category2">Memory</p>
+  
+          <p class="score">92<span> / 100</span></p>
+        </div>
+        <div class="summary__detail-item summary__detail-item3">
+          <img src="./assets/images/icon-verbal.svg"/>
+          <p class="category category3">Verbal</p>
+  
+          <p class="score">61<span> / 100</span></p>
+        </div>
+        <div class="summary__detail-item summary__detail-item4">
+          <img src="./assets/images/icon-visual.svg"/>
+          <p class="category category4">Visual</p>
+  
+          <p class="score">72<span> / 100</span></p>
+        </div>
+        <button>Continue</button>
+  
+  
+      </div>
     </section>
-    <div class="summary__detail">
-      <h3>Summary</h3>
-      <div class="summary__detail-item">
-        <p>reaction</p>
-
-        <p class="socore">80/100</p>
-      </div>
-      <div class="summary__detail-item">
-        <p>Memory</p>
-
-        <p class="socore">92/100</p>
-      </div>
-      <div class="summary__detail-item">
-        <p>Verbal</p>
-
-        <p class="socore">61/100</p>
-      </div>
-      <div class="summary__detail-item">
-        <p>Visual</p>
-
-        <p class="socore">72/100</p>
-      </div>
-
-
-    </div>
+    
   </main>
 
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
