alt in img tag adeed

--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
       <div class="summary__detail">
         <h3>Summary</h3>
         <div class="summary__detail-item summary__detail-item1">
-          <img src="./assets/images/icon-reaction.svg"/>
+          <img src="./assets/images/icon-reaction.svg" alt="reaction"/>
           <p class="category category1">reaction</p>
   
           <p class="score">80<span> / 100</span></p>
         </div>
         <div class="summary__detail-item summary__detail-item2">
-          <img src="./assets/images/icon-memory.svg"/>
+          <img src="./assets/images/icon-memory.svg" alt="memory"/>
           <p class="category category2">Memory</p>
   
           <p class="score">92<span> / 100</span></p>
         </div>
         <div class="summary__detail-item summary__detail-item3">
-          <img src="./assets/images/icon-verbal.svg"/>
+          <img src="./assets/images/icon-verbal.svg" alt="verbal"/>
           <p class="category category3">Verbal</p>
   
           <p class="score">61<span> / 100</span></p>
         </div>
         <div class="summary__detail-item summary__detail-item4">
-          <img src="./assets/images/icon-visual.svg"/>
+          <img src="./assets/images/icon-visual.svg" alt="visual"/>
           <p class="category category4">Visual</p>
   
           <p class="score">72<span> / 100</span></p>
