--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   </style>
 </head>
 <body>
+  <header>
+    <h1>Result Summary</h1>
+  </header>
 
   <main>
 
@@ -65,9 +68,5 @@
   </main>
 
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
